Removed print statement